--- a/index.html
+++ b/index.html
@@ -50,38 +50,32 @@
   </div>
   <div class="info"></div>
   <script>
-    const overList = [];
-    const problemElement = document.querySelector('.problem');
-    const answerElement = document.querySelector('.answer input');
-    const submitElement = document.querySelector('.submit button');
-    const infoElement = document.querySelector('.info');
-    let problem;
-    let successNumber = 0;
-    let errorNumber = 0;
+    console.log('有同学反应手机访问可能有问题, 因此我编译了一下, 源码我放到了这个项目中, 需要请自取！');
+
+    var _slicedToArray = function () { function sliceIterator(arr, i) { var _arr = []; var _n = true; var _d = false; var _e = undefined; try { for (var _i = arr[Symbol.iterator](), _s; !(_n = (_s = _i.next()).done); _n = true) { _arr.push(_s.value); if (i && _arr.length === i) break; } } catch (err) { _d = true; _e = err; } finally { try { if (!_n && _i["return"]) _i["return"](); } finally { if (_d) throw _e; } } return _arr; } return function (arr, i) { if (Array.isArray(arr)) { return arr; } else if (Symbol.iterator in Object(arr)) { return sliceIterator(arr, i); } else { throw new TypeError("Invalid attempt to destructure non-iterable instance"); } }; }();
+
+    function _toConsumableArray(arr) { if (Array.isArray(arr)) { for (var i = 0, arr2 = Array(arr.length); i < arr.length; i++) { arr2[i] = arr[i]; } return arr2; } else { return Array.from(arr); } }
+
+    var overList = [];
+    var problemElement = document.querySelector('.problem');
+    var answerElement = document.querySelector('.answer input');
+    var submitElement = document.querySelector('.submit button');
+    var infoElement = document.querySelector('.info');
+    var problem = void 0;
+    var successNumber = 0;
+    var errorNumber = 0;
 
     // 挣值模型 [名称, 代码, 公式]
-    const modelList = [
-      ['成本偏差', 'CV', 'EV-AC'],
-      ['成本绩效指数', 'CPI', 'EV/AC'],
-      ['进度偏差', 'SV', 'EV-PV'],
-      ['进度绩效指数', 'SPI', 'EV/PV'],
-      ['完工估算', 'EAC', 'EAC/CPI'],
-      ['完工尚需估算', 'ETC', 'EAC-AC'],
-      ['完工剩余绩效指数', 'TCPI', '(BAC-EV)/[BAC(EAC)-AC]'],
-      ['完工成本偏差', 'VAC', 'BAC-EAC'],
-      ['估算完工工期', 'EDAC', 'BDAC/SPI'],
-    ];
+    var modelList = [['成本偏差', 'CV', 'EV-AC'], ['成本绩效指数', 'CPI', 'EV/AC'], ['进度偏差', 'SV', 'EV-PV'], ['进度绩效指数', 'SPI', 'EV/PV'], ['完工估算', 'EAC', 'EAC/CPI'], ['完工尚需估算', 'ETC', 'EAC-AC'], ['完工剩余绩效指数', 'TCPI', '(BAC-EV)/[BAC(EAC)-AC]'], ['完工成本偏差', 'VAC', 'BAC-EAC'], ['估算完工工期', 'EDAC', 'BDAC/SPI']];
 
     // 生成一个题目
     function getRandomProblem(model) {
-      const [name, value, formula] = model;
-      const list = [
-        [`${name}如何表示?(例：CV)`, [value]],
-        [`${name}公式?(例：EV-AC)`, [formula, `${value}=${formula}`]],
-        [`${value}指?(例：成本偏差)`, [name]],
-        [`${value}公式?(例：CV=EV-AC)`, [formula, `${value}=${formula}`]],
-        [`${formula}计算的是?(例：成本偏差)`, [name, value]],
-      ]
+      var _model = _slicedToArray(model, 3),
+          name = _model[0],
+          value = _model[1],
+          formula = _model[2];
+
+      var list = [[name + '\u5982\u4F55\u8868\u793A?(\u4F8B\uFF1ACV)', [value]], [name + '\u516C\u5F0F?(\u4F8B\uFF1AEV-AC)', [formula, value + '=' + formula]], [value + '\u6307?(\u4F8B\uFF1A\u6210\u672C\u504F\u5DEE)', [name]], [value + '\u516C\u5F0F?(\u4F8B\uFF1ACV=EV-AC)', [formula, value + '=' + formula]], [formula + '\u8BA1\u7B97\u7684\u662F?(\u4F8B\uFF1A\u6210\u672C\u504F\u5DEE)', [name, value]]];
 
       return list[parseInt(Math.random() * list.length, 10)];
     }
@@ -90,42 +84,42 @@
     function generateProblem() {
       answerElement.value = '';
       infoElement.innerHTML = '';
-      const length = modelList.length;
+      var length = modelList.length;
 
       // 一轮结束, 自动下一轮
       if (length === 0) {
         modelList.push.apply(modelList, overList.splice(0));
       }
 
-      const index = parseInt(Math.random() * length, 10);
-      const model = modelList.splice(index, 1);
+      var index = parseInt(Math.random() * length, 10);
+      var model = modelList.splice(index, 1);
       overList.push.apply(overList, model);
-      problem = getRandomProblem(...model);
+      problem = getRandomProblem.apply(undefined, _toConsumableArray(model));
 
       problemElement.innerHTML = problem[0];
     }
 
     // 提交问题
-    submitElement.addEventListener('click', () => {
+    submitElement.addEventListener('click', function () {
       // 答案转为大写方便匹配
-      const submitValue = answerElement.value.toUpperCase();
+      var submitValue = answerElement.value.toUpperCase();
       if (problem[1].includes(submitValue)) {
         // 答对
         infoElement.innerHTML = '正确! 进入下一题';
         setTimeout(generateProblem, 2000);
-        successNumber ++;
+        successNumber++;
       } else {
         // 答错
-        infoElement.innerHTML = `错误, 答案是<span style="color: red;">${problem[1][0]}</span>, 5秒后自动进入下一题`;
+        infoElement.innerHTML = '\u9519\u8BEF, \u7B54\u6848\u662F<span style="color: red;">' + problem[1][0] + '</span>, 5\u79D2\u540E\u81EA\u52A8\u8FDB\u5165\u4E0B\u4E00\u9898';
         setTimeout(generateProblem, 5000);
-        errorNumber ++;
+        errorNumber++;
       }
 
       console.log('答对', successNumber, '题, 答错', errorNumber, '题!');
     });
 
     // 输入框回车也相当于提交
-    answerElement.addEventListener('keydown', (event) => {
+    answerElement.addEventListener('keydown', function (event) {
       event.keyCode === 13 && submitElement.click();
     });
 
